--- a/src/socialcard/components/cardcontent/styles.scss
+++ b/src/socialcard/components/cardcontent/styles.scss
@@ -11,5 +11,7 @@
     border-style: solid;
     border-width: 1px;
     border-color: lightgrey;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
   }
 }
