--- a/src/socialcard/styles.scss
+++ b/src/socialcard/styles.scss
@@ -1,3 +1,16 @@
 .social-card {
   max-width: 500px;
 }
+
+.social-card-reactions {
+  li {
+    display: inline-block;
+    padding: 15px;
+  }
+
+  img {
+    width: 24px !important;
+    height: 24px !important;
+    padding-right: 10px;
+  }
+}
