--- a/src/socialcard/components/cardheader/styles.scss
+++ b/src/socialcard/components/cardheader/styles.scss
@@ -1,4 +1,17 @@
 .social-card-header {
-  margin-bottom: 5px;
+  margin-bottom: 15px;
   padding-left: 5px;
+  display: "inline-block";
+
+  .social-card-header-body {
+    width:75%;
+    margin-bottom: 10px;
+  }
+
+  img {
+    width:25%;
+    width: 50px !important;
+    height: 50px !important;
+    padding: 5px;
+  }
 }
